     * removed get_s3_keys()
     * create_bucket()'s second arg is now named region, not location
   * mrjob.fs.s3.wrap_aws_conn() removed
   * removed utility functions from mrjob.aws:
     * emr_endpoint_for_region()
     * emr_ssl_host_for_region()
     * s3_endpoint_for_region()
     * s3_location_constraint_for_region()
   * 'EU' alias for region 'us-west-1' no longer works
 * removed deprecated INPUT, OUTPUT attributes from JarStep
 * removed deprecated filesystem methods:
   * path_exists()
   * path_join()
   * SSHFilesystem.ssh_slave_hosts()
 * removed deprecated mrjob command aliases:
   * create-job-flow
   * terminate-idle-job-flows
   * terminate-job-flow
 * removed deprecated MRJob/MRJobLauncher methods:
   * all_option_groups()
   * is_mapper_or_reducer()
   * mr()
 * removed option groups (deprecated) from MRJobLauncher
 * removed deprecated functions:
   * mrjob.parse:
     * is_windows_path()
     * iso8601_to_timestamp()
     * iso8601_to_datetime()
     * parse_key_value_list()
     * parse_port_range_list()
   * mrjob.util:
     * args_for_opt_dest_subset()
     * bash_wrap()
     * buffer_iterator_to_line_iterator()
     * bunzip2_stream() (now in mrjob.cat)
     * gunzip_stream() (now in mrjob.cat)
     * populate_option_groups_with_options()
     * scrape_options_and_index_by_dest()
     * scrape_options_into_new_groups()
 * removed mrjob.retry.RetryGoRound
 * removed deprecated options:
   * bootstrap_cmds
   * bootstrap_files
   * bootstrap_scripts
   * hadoop_home
   * hadoop_streaming_jar_on_emr
   * num_ec2_instances
   * python_archives
   * setup_cmds
   * setup_scripts
   * strict_protocols
 * removed deprecated option aliases:
   * ami_version
   * aws_availability_zone
   * aws_region
   * base_tmp_dir
   * check_emr_status_every
   * ec2_core_instance_bid_price
   * ec2_core_instance_type
   * ec2_instance_type
   * ec2_master_instance_bid_price
   * ec2_master_instance_type
   * ec2_slave_instance_type